--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,9 @@
     %title= content_for?(:title) ? yield(:title) : "Marrig"
     %meta{:content => content_for?(:description) ? yield(:description) : "Marrig", :name => "Metrics visualizer on the web"}
     = stylesheet_link_tag :application, :media => "all"
+    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"
+    = javascript_include_tag "raphael.min"
+    = javascript_include_tag "morris.min"
     = javascript_include_tag :application
   %body
     #container.container
