--- a/app/views/graphs/graph.haml
+++ b/app/views/graphs/graph.haml
@@ -1,4 +1,5 @@
 %h2 #{params[:service_name]}/#{params[:section_name]}/#{@type}/#{params[:name]}
-%ul
-  - @stats.each do |stat|
-    %li #{stat.count}
+#graph
+
+:javascript
+  Morris.Line(#{@data.to_json})
