Change URI structure

--- a/app/views/graphs/graph.haml
+++ b/app/views/graphs/graph.haml
@@ -1,4 +1,4 @@
-%h2 #{params[:service_name]}/#{params[:section_name]}/#{@type}/#{params[:name]}
+%h2 #{params[:service_name]}/#{params[:section_name]}/#{params[:name]}
 #graph
 
 :javascript
