--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,3 +1,3 @@
 %ul
   - @graphs.each do |graph|
-    %li #{link_to(graph.service_name, "/graphs/#{graph.service_name}")}
+    %li #{link_to(graph.service_name, "/stats/#{graph.service_name}")}
