--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,18 +1,33 @@
-!!!
+!!! 5
 %html
   %head
-    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, maximum-scale=1"}
+    %meta{:name => "viewport", :content => "width=device-width"}
     %title= content_for?(:title) ? yield(:title) : "Graphico"
     %meta{:content => content_for?(:description) ? yield(:description) : "Graphico", :name => "Metrics visualizer on the web"}
+
+    = stylesheet_link_tag 'bootstrap.min.css'
     = stylesheet_link_tag :application, :media => "all"
-    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"
-    = javascript_include_tag "raphael.min"
-    = javascript_include_tag "morris.min"
+    :css
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    = stylesheet_link_tag 'bootstrap-responsive.min.css'
+
+    = javascript_include_tag 'modernizr-2.6.2-respond-1.1.0.min.js'
+    = javascript_include_tag 'jquery-1.8.3.min.js'
+    = javascript_include_tag 'raphael.min'
+    = javascript_include_tag 'morris.min'
     = javascript_include_tag :application
   %body
-    #container.container
-      %header
-        %h1#appname Graphico
-      #main{:role => "main"}
-        = yield
-      %footer
+    .navbar.navbar-inverse.navbar-fixed-top
+      .navbar-inner
+        .container
+          %a.btn.btn-navbar(data-target=".nav-collapse")
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.brand(href="/") Graphico
+
+    .container
+      = yield
