Add tab navigation

--- a/app/views/chart.haml
+++ b/app/views/chart.haml
@@ -1,3 +1,9 @@
+%ul.nav.nav-tabs
+  %li{class: @interval == 'daily' ? 'active' : nil}
+    %a(href="/charts/#{@service_name}/#{@section_name}/#{@chart_name}/daily") Daily
+  %li{class: @interval == 'monthly' ? 'active' : nil}
+    %a(href="/charts/#{@service_name}/#{@section_name}/#{@chart_name}/monthly") Monthly
+
 #chart
 
 :javascript
