--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,47 +20,7 @@
     = javascript_include_tag 'morris.min'
     = javascript_include_tag :application
   %body
-    .navbar.navbar-inverse.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.btn.btn-navbar(data-toggle="collapse" data-target=".nav-collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-
-          %a.brand(href="/") Graphico
-
-          .nav-collapse.collapse
-            %ul.nav
-              %li.dropdown
-                %a.dropdown-toggle(href="#" data-toggle="dropdown")
-                  Service
-                  %b.carret
-                %ul.dropdown-menu
-                  - @services.each do |service|
-                    %li{class: @service_name == service ? 'active' : nil}
-                      #{link_to(service, "/charts/#{service}")}
-
-              - if defined?(@sections) and (not @sections.empty?)
-                %li.dropdown
-                  %a.dropdown-toggle(href="#" data-toggle="dropdown")
-                    Section
-                    %b.carret
-                  %ul.dropdown-menu
-                    - @sections.each do |section|
-                      %li{class: @section_name == section ? 'active' : nil}
-                        #{link_to(section, "/charts/#{@service_name}/#{section}")}
-
-              - if defined?(@charts) and (not @charts.empty?)
-                %li.dropdown
-                  %a.dropdown-toggle(href="#" data-toggle="dropdown")
-                    Metrics
-                    %b.carret
-                  %ul.dropdown-menu
-                    - @charts.each do |chart|
-                      %li{class: @chart_name == chart.name ? 'active' : nil}
-                        #{link_to(chart.name, "/charts/#{@service_name}/#{@section_name}/#{chart.name}")}
-
+    = partial 'nav'
 
     .container
       = partial 'breadcrumb'
