--- a/app/views/_nav.haml
+++ b/app/views/_nav.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
 
-      %a.brand(href="/") Graphico
+      %a.brand{href: url(:index)} Graphico
 
       .nav-collapse.collapse
         %ul.nav
@@ -17,7 +17,7 @@
             %ul.dropdown-menu
               - @services.each do |service|
                 %li{class: @service_name == service ? 'active' : nil}
-                  #{link_to(service, "/charts/#{service}")}
+                  =link_to service, url(:charts, service)
 
           - if defined?(@sections) and (not @sections.empty?)
             %li.dropdown
@@ -27,7 +27,7 @@
               %ul.dropdown-menu
                 - @sections.each do |section|
                   %li{class: @section_name == section ? 'active' : nil}
-                    #{link_to(section, "/charts/#{@service_name}/#{section}")}
+                    =link_to section, url(:charts, @service_name, section)
 
           - if defined?(@charts) and (not @charts.empty?)
             %li.dropdown
@@ -37,5 +37,5 @@
               %ul.dropdown-menu
                 - @charts.each do |chart|
                   %li{class: @chart_name == chart.name ? 'active' : nil}
-                    #{link_to(chart.name, "/charts/#{@service_name}/#{@section_name}/#{chart.name}")}
+                    =link_to chart.name, url(:charts, @service_name, @section_name, chart.name)
 
