--- a/app/views/section.haml
+++ b/app/views/section.haml
@@ -2,4 +2,5 @@
 
 %ul
   - @charts.each do |chart|
-    %li #{link_to(chart.name, "/charts/#{@service_name}/#{@section_name}/#{chart.name}")}
+    %li
+      =link_to chart.name, url(:charts, @service_name, @section_name, chart.name)
