--- a/app/views/chart.haml
+++ b/app/views/chart.haml
@@ -7,4 +7,4 @@
   %li{class: @interval == 'monthly' ? 'active' : nil}
     =link_to 'Monthly', url(:charts, @service_name, @section_name, @chart_name, 'monthly')
 
-= @chart.render_morris_chart(interval: @interval)
+!= @chart.render_morris_chart(interval: @interval)
